hphp/test/zend/good/ext/standard/tests/url/base64_decode_variation_001.php.expectf
*** Testing base64_decode() : usage variations ***
Error: 8 - Undefined variable: undefined_var, %s/zend/good/ext/standard/tests/url/base64_decode_variation_001.php(65)
Error: 8 - Undefined variable: unset_var, %s/zend/good/ext/standard/tests/url/base64_decode_variation_001.php(68)

-- Arg value 0 --

Warning: base64_decode() expects parameter 1 to be string, integer given in %s/zend/good/ext/standard/tests/url/base64_decode_variation_001.php on line 79
NULL

-- Arg value 1 --

Warning: base64_decode() expects parameter 1 to be string, integer given in %s/zend/good/ext/standard/tests/url/base64_decode_variation_001.php on line 79
NULL

-- Arg value 12345 --

Warning: base64_decode() expects parameter 1 to be string, integer given in %s/zend/good/ext/standard/tests/url/base64_decode_variation_001.php on line 79
NULL

-- Arg value -2345 --

Warning: base64_decode() expects parameter 1 to be string, integer given in %s/zend/good/ext/standard/tests/url/base64_decode_variation_001.php on line 79
NULL

-- Arg value 10.5 --

Warning: base64_decode() expects parameter 1 to be string, double given in %s/zend/good/ext/standard/tests/url/base64_decode_variation_001.php on line 79
NULL

-- Arg value -10.5 --

Warning: base64_decode() expects parameter 1 to be string, double given in %s/zend/good/ext/standard/tests/url/base64_decode_variation_001.php on line 79
NULL

-- Arg value 10.1234567e10 --

Warning: base64_decode() expects parameter 1 to be string, double given in %s/zend/good/ext/standard/tests/url/base64_decode_variation_001.php on line 79
NULL

-- Arg value 10.7654321E-10 --

Warning: base64_decode() expects parameter 1 to be string, double given in %s/zend/good/ext/standard/tests/url/base64_decode_variation_001.php on line 79
NULL

-- Arg value .5 --

Warning: base64_decode() expects parameter 1 to be string, double given in %s/zend/good/ext/standard/tests/url/base64_decode_variation_001.php on line 79
NULL

-- Arg value array() --

Warning: base64_decode() expects parameter 1 to be string, array given in %s/zend/good/ext/standard/tests/url/base64_decode_variation_001.php on line 79
NULL

-- Arg value array(0) --

Warning: base64_decode() expects parameter 1 to be string, array given in %s/zend/good/ext/standard/tests/url/base64_decode_variation_001.php on line 79
NULL

-- Arg value array(1) --

Warning: base64_decode() expects parameter 1 to be string, array given in %s/zend/good/ext/standard/tests/url/base64_decode_variation_001.php on line 79
NULL

-- Arg value array(1, 2) --

Warning: base64_decode() expects parameter 1 to be string, array given in %s/zend/good/ext/standard/tests/url/base64_decode_variation_001.php on line 79
NULL

-- Arg value array('color' => 'red', 'item' => 'pen' --

Warning: base64_decode() expects parameter 1 to be string, array given in %s/zend/good/ext/standard/tests/url/base64_decode_variation_001.php on line 79
NULL

-- Arg value NULL --

Warning: base64_decode() expects parameter 1 to be string, null given in %s/zend/good/ext/standard/tests/url/base64_decode_variation_001.php on line 79
NULL

-- Arg value null --

Warning: base64_decode() expects parameter 1 to be string, null given in %s/zend/good/ext/standard/tests/url/base64_decode_variation_001.php on line 79
NULL

-- Arg value true --

Warning: base64_decode() expects parameter 1 to be string, boolean given in %s/zend/good/ext/standard/tests/url/base64_decode_variation_001.php on line 79
NULL

-- Arg value false --

Warning: base64_decode() expects parameter 1 to be string, boolean given in %s/zend/good/ext/standard/tests/url/base64_decode_variation_001.php on line 79
NULL

-- Arg value TRUE --

Warning: base64_decode() expects parameter 1 to be string, boolean given in %s/zend/good/ext/standard/tests/url/base64_decode_variation_001.php on line 79
NULL

-- Arg value FALSE --

Warning: base64_decode() expects parameter 1 to be string, boolean given in %s/zend/good/ext/standard/tests/url/base64_decode_variation_001.php on line 79
NULL

-- Arg value "" --
string(0) ""

-- Arg value '' --
string(0) ""

-- Arg value stdClass object --

Warning: base64_decode() expects parameter 1 to be string, object given in %s/zend/good/ext/standard/tests/url/base64_decode_variation_001.php on line 79
NULL

-- Arg value undefined variable --

Warning: base64_decode() expects parameter 1 to be string, null given in %s/zend/good/ext/standard/tests/url/base64_decode_variation_001.php on line 79
NULL

-- Arg value unset variable --

Warning: base64_decode() expects parameter 1 to be string, null given in %s/zend/good/ext/standard/tests/url/base64_decode_variation_001.php on line 79
NULL

-- Arg value resource --

Warning: base64_decode() expects parameter 1 to be string, resource given in %s/zend/good/ext/standard/tests/url/base64_decode_variation_001.php on line 79
NULL
===Done===